--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html {
+  -webkit-tap-highlight-color: transparent;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::selection {
+  background-color: rgb(226, 226, 226);
+  color: rgb(22, 22, 22);
+}
+
+::-moz-selection {
+  background-color: rgb(226, 226, 226);
+  color: rgb(22, 22, 22);
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
+.heading {
+  font-family: "Archivo Black", sans-serif;
+}
+
+.navbar a.active p {
+  color: #cfc4b5 !important;
+  font-weight: 700;
+  text-decoration: underline;
+  text-underline-offset: 6px;
+}
+
+.mobile-navbar a.active p {
+  color: rgb(226, 226, 226) !important;
+  font-weight: 700;
 }
